backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: backend:latest
        name: backend
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          protocol: TCP
      restartPolicy: Always
