react-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: react-frontend
  name: react-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - image: react-frontend
        name: react-frontend
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
