backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 3000
  selector:
    app: backend
