react-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: react-frontend
  name: react-frontend
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  selector:
    app: react-frontend
