ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8081
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-frontend
            port:
              number: 8080
